--- a/src/Sensors.css
+++ b/src/Sensors.css
@@ -5,8 +5,8 @@
 }
 
 .sensor-item {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     border: 2px solid white;
     border-radius: 60px;
     display: inline-block;
@@ -18,7 +18,7 @@
 }
 
 .sensor-item-header {
-
+    margin-top: 10px;
 }
 
 .sensor-item-content {
