--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+@import 'https://fonts.googleapis.com/css?family=Lato:300';
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: black;
   text-align: center;
+  font-size: 150%;
 }
 
 .wrapper {
